# double-star

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  cspell.yaml  docker-compose.yml  flake.nix  justfile
.github/workflows/: check.yml
.helix/: languages.toml
docs/: book.toml  manifesto.md
docs/src/: SUMMARY.md  introduction.md
scripts/: db.nu
src/double-star/: Cargo.toml  schema.json
src/double-star/src/: config.rs  lib.rs  main.rs
src/gravity/: Cargo.toml
src/gravity/src/: config.rs  lib.rs  log.rs
src/nebulon/: Cargo.toml  README.md  schema.json
src/nebulon/migrations/private/migrations/definitions/: _initial.json
src/nebulon/migrations/private/schemas/: file.surql  journal.surql  memo.surql
src/nebulon/migrations/public/events/: posted_in.surql
src/nebulon/migrations/public/migrations/definitions/: _initial.json
src/nebulon/migrations/public/schemas/: chat.surql  file.surql  message.surql  script_migration.surql
src/nebulon/src/: client.rs  config.rs  lib.rs  main.rs
src/nebulon/tests/: messages.rs
src/nebulon/tests/common/: mod.rs
src/orbitus/: Cargo.toml  README.md  schema.json
src/orbitus/src/: app.rs  config.rs  lib.rs  main.rs  ws.rs
