[package]
name = "double-star"
version = "0.1.0"
description = "Double Star"
repository = "https://gitlab.com/haras-unicorn/double-star"
authors = ["haras <social@haras.anonaddy.me>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
gravity = { path = "../gravity" }
nebulon = { path = "../nebulon" }
orbitus = { path = "../orbitus" }

anyhow = { version = "1.0.89", features = ["backtrace"] }
async-trait = "0.1.83"
clap = { version = "4.5.19", features = ["derive"] }
directories = "5.0.1"
flume = { version = "0.11.0", features = ["async"] }
futures = "0.3.31"
merge = "0.1.0"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shellexpand = "3.1.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
candle-core = { version = "0.7.2", features = ["cuda"] }
candle-nn = { version = "0.7.2", features = ["cuda"] }
candle-transformers = { version = "0.7.2", features = ["cuda"] }
candle-onnx = "0.7.2"
hf-hub = { version = "0.3.2", features = ["tokio"] }
tokenizers = { version = "0.20.0", features = ["hf-hub"] }
tokio-tungstenite = "0.24.0"
schemars = { version = "0.8.21", features = ["preserve_order"] }
derivative = "2.2.0"
