[package]
name = "gravity"
version = "0.1.0"
description = "Gravity"
repository = "https://gitlab.com/haras-unicorn/double-star"
authors = ["haras <social@haras.anonaddy.me>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.19", features = ["derive"] }
directories = "5.0.1"
dotenvy = "0.15.7"
envy = "0.4.2"
flume = "0.11.1"
futures = "0.3.31"
merge = "0.1.0"
notify = { version = "6.1.1", default-features = false, features = [
  "macos_kqueue",
  "serde",
] }
schemars = { version = "0.8.21", features = ["preserve_order"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
