[package]
name = "nebulon"
version = "0.1.0"
description = "Nebulon"
repository = "https://gitlab.com/haras-unicorn/double-star"
authors = ["haras <social@haras.anonaddy.me>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
gravity = { path = "../gravity" }

anyhow = { version = "1.0.89", features = ["backtrace"] }
async-trait = "0.1.83"
clap = { version = "4.5.19", features = ["derive"] }
directories = "5.0.1"
flume = { version = "0.11.0", features = ["async"] }
merge = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
surrealdb = "2.0.3"
surrealdb-migrations = "2.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
ulid = { version = "1.1.3", features = ["serde"] }
include_dir = "0.7.4"
schemars = { version = "0.8.21", features = ["preserve_order"] }
derivative = "2.2.0"
