[package]
name = "orbitus"
version = "0.1.0"
description = "Orbitus"
repository = "https://gitlab.com/haras-unicorn/double-star"
authors = ["haras <social@haras.anonaddy.me>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
gravity = { path = "../gravity" }

anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.19", features = ["derive"] }
flume = { version = "0.11.0", features = ["async"] }
futures = "0.3.31"
merge = "0.1.0"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
iced = { version = "0.13.1", features = ["tokio"] }
iced_futures = { version = "0.13.2", features = ["tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio-tungstenite = "0.24.0"
schemars = { version = "0.8.21", features = ["preserve_order"] }
derivative = "2.2.0"
palette = { version = "0.7.6", features = ["serde", "serializing"] }
dark-light = "1.1.1"
